# internal/server/grpc.go
@@ -12,7 +12,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, resource *service.ResourceService, comment *service.CommentService, announcement *service.AnnouncementService, metricsService *service.MetricsService, adsense *service.AdsenseService, douban *service.DoubanService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, resource *service.ResourceService, comment *service.CommentService, announcement *service.AnnouncementService, metricsService *service.MetricsService, adsense *service.AdsenseService, douban *service.DoubanService, captchaService *service.CaptchaService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -35,5 +35,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, resource *se
 	ets.RegisterMetricsServer(srv, metricsService)
 	ets.RegisterAdsenseServer(srv, adsense)
 	ets.RegisterDoubanServer(srv, douban)
+	ets.RegisterCaptchaServer(srv, captchaService)
 	return srv
 }
